Fix align in pt-en button

--- a/app/assets/stylesheets/_headers_from_future_juntos.scss
+++ b/app/assets/stylesheets/_headers_from_future_juntos.scss
@@ -97,10 +97,9 @@
   height: 44px;
 }
 
-.btn-translation{
+.btn-translation {
   position: static;
   top: 5px;
-  right: -73px;
   display: inline-block;
   margin: 5px 5px 5px 0px;
   padding: 8px 8px;
@@ -110,16 +109,14 @@
   transition: all 500ms ease;
   background-color: #fff;
   color: #FFB74D;
-
+  line-height: 13px;
   font-size: 13px;
   text-decoration: none;
 }
 
-
 .btn-translation.active {
   background-color: #FFB74D;
   color: #f1f2f3;
-
 }
 
 .btn-translation:hover,
